gl33-master/src/test/deca/context/invalid/other/appelFauxFonction8.deca
// Test de contexte invalide : appel faux de la fonction (appel sans paramètre d'entrée)

class MyClass{

    float puissance(float a){
        return a*a;
    }
}

{
    MyClass m = new MyClass();
    int x = m.puissance();
}
